# kastle2

./: .clang-format  .gitignore  APP_LIST.md  CODING_STYLE.md  CONTRIBUTING.md  FAQ.md  GLOSSARY_EXAMPLES.md  LICENSE  MIDI_MAPPINGS.md  README.md  TOOLCHAIN_INSTALL.md  configure.sh  flake.nix
case/stl/: kastle2-case-nographics-noinserts-programming.stl  kastle2-case-nographics-noinserts.stl  kastle2-case-nographics-programming.stl  kastle2-case-nographics.stl  kastle2-pinheaders-holder.stl
case/tools/: kastle2-socket-driver.stl
case/top-panel/: kastle2-template-panel.brd
code/: CMakeLists.txt  Doxyfile  pico_sdk_import.cmake
code/board/: kastle2_board.h  memmap_kastle2.ld
code/docs/: groups.dox  mainpage.md
code/lib/: I2S.cpp  I2S.hpp  I2S.pio
code/scripts/: create_exponential_table.sh  license-check.py  rp2040_freq.py  srec_cat_fill.py  tanhLUT.py
code/src/: tusb_config.h  usb_descriptors.c
code/src/apps/Calibration/: AppCalibration.cpp  AppCalibration.hpp  CMakeLists.txt  Sentence.hpp  main.cpp  version_samples_app.hpp
code/src/apps/ExampleSynth/: AppExampleSynth.cpp  AppExampleSynth.hpp  CMakeLists.txt  ExampleSynthParameterMaps.hpp  main.cpp  version_samples_app.hpp
code/src/apps/FxWizard/: AppFxWizard.cpp  AppFxWizard.hpp  CMakeLists.txt  FX_WIZARD_FILE_FORMAT.md  FxWizardFile.hpp  FxWizardParameterMaps.hpp  README.md  cc.hpp  main.cpp  version_samples_app.hpp
code/src/apps/Template/: AppTemplate.cpp  AppTemplate.hpp  CMakeLists.txt  main.cpp
code/src/apps/WaveBard/: AppWaveBard.cpp  AppWaveBard.hpp  CMakeLists.txt  README.md  WAVE_BARD_FORMAT.md  WaveBardFile.hpp  WaveBardParameterMaps.hpp  cc.hpp  main.cpp  version_samples_app.hpp
code/src/common/: EnumTools.hpp  config.hpp  debug.hpp  fastcode.cpp  fastcode.hpp  utils.hpp
code/src/common/controls/: DirtyInputsHandler.hpp  FancyMode.cpp  FancyMode.hpp  FancyPot.cpp  FancyPot.hpp  ShiftTrigger.hpp
code/src/common/core/: App.hpp  Base.cpp  Base.hpp  Clock.cpp  Clock.hpp  Codec.hpp  FakeBlinker.hpp  Hardware.cpp  Hardware.hpp  Kastle2.cpp  Kastle2.hpp  Kastle2_cc.hpp  Kastle2_parameters.hpp  Memory.cpp  Memory.hpp  MultiCore.hpp  UserDataFile.hpp
code/src/common/core/clocks/: ClockSource.hpp  ExternalClockSource.cpp  ExternalClockSource.hpp  InternalClockSource.cpp  InternalClockSource.hpp  MidiClockSource.cpp  MidiClockSource.hpp
code/src/common/core/midi/: Handler.cpp  Handler.hpp  Message.cpp  Message.hpp  NoteSender.hpp
code/src/common/debug/: UsbSerial.cpp  UsbSerial.hpp
code/src/common/dsp/control/: AdsrEnv.cpp  AdsrEnv.hpp  BeatDetector.cpp  BeatDetector.hpp  EnvelopeFollower.cpp  EnvelopeFollower.hpp  Lfo.cpp  Lfo.hpp
code/src/common/dsp/effects/: BitCrusher.hpp  CorrectingTrackAndHold.cpp  CorrectingTrackAndHold.hpp  HardClipper.cpp  HardClipper.hpp  SoftClipper.cpp  SoftClipper.hpp  StereoDelay.cpp  StereoDelay.hpp  lookup_tanh.hpp
code/src/common/dsp/filters/: DjFilter.cpp  DjFilter.hpp  DjFilterStereo.cpp  DjFilterStereo.hpp  Svf.cpp  Svf.hpp  SvfStereo.cpp  SvfStereo.hpp
code/src/common/dsp/math/: Fft.cpp  Fft.hpp  Fraction.hpp  RunningAverage.hpp  bit_utils.hpp  lookup_qmath_sine.hpp  math_utils.hpp  qmath.hpp
code/src/common/dsp/sampling/: SamplePlayer.hpp
code/src/common/dsp/synthesis/: Fm2.cpp  Fm2.hpp  MultiOscillator.cpp  MultiOscillator.hpp  Oscillator.cpp  Oscillator.hpp  OscillatorQ15.cpp  OscillatorQ15.hpp  WhiteNoise.hpp
code/src/common/dsp/utility/: AdvancedDynamicDelayLine.hpp  AutoFreeze.hpp  EdgeDetector.hpp  KastleRungler.cpp  KastleRungler.hpp  NumberFlasher.hpp  Portamento.cpp  Portamento.hpp  Quantizer.cpp  Quantizer.hpp  RingBuffer.hpp  Sequencer.cpp  Sequencer.hpp  SignalCorrelator.cpp  SignalCorrelator.hpp  SlewGenerator.hpp  Slewer.hpp  TriggerGenerator.hpp  lookup_SlewGenerator.hpp
code/src/common/peripherals/: AT24C.cpp  AT24C.hpp  NAU88C22.cpp  NAU88C22.hpp  WS2812.cpp  WS2812.hpp  WS2812.pio
code/src/common/testmode/: TestEntry.cpp  TestEntry.hpp  TestMode.cpp  TestMode.hpp  VersionChainGenerator.hpp  version_samples.cpp  version_samples.hpp
